fix alignment on very large screens

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,6 @@ cite {
 .display-wrapper {
     height: var(--display-height);
     margin: 0 10px;
-    max-width: 1920px;
     position: relative;
 }
 
