--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -5,7 +5,6 @@
     gap: 30px;
     justify-content: center;
     margin-top: 50px;
-    max-width: 1920px;
     padding: 0 10px 50px 10px;
 }
 
